# blog

./: .gitignore  .nojekyll  CNAME  README.md  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  posts.html  posts.qmd  posts.xml  robots.txt  search.json  sitemap.xml  styles.css
code/rust-node/sam-node/: Cargo.toml  README.md  package-lock.json
code/rust-node/sam-node/src/: lib.rs
modal-deep-dive/: pyproject.toml
modal-deep-dive/lib/: cube.py  empty.py  hello.py  hello_local_entry.py  hello_server.py  nfs.py  square.py
posts/2012-11-26-some-homological-algebra-computation/: index.html  index.qmd
posts/2012-11-30-classification-of-vector-bundles-on-elliptic-curves-2/: index.html  index.qmd
posts/2012-12-06-vector-bundles-locally-free-sheaves-and-divisors-on-a-curve/: index.html  index.qmd
posts/2013-09-09-hilbert-scheme-mckay-correspondence/: index.html  index.qmd
posts/2015-09-13-restaurant-revenue-prediction-with-bart-machine/: index.html  index.qmd
posts/2016-05-05-monty-hall-simulation/: index.html  index.qmd
posts/2017-01-21-distributed-lp-spark-thesis/: index.html  index.qmd
posts/2017-06-30-from-machine-learning-to-type-theory/: index.html  index.qmd
posts/2017-07-12-whats-up-with-word-embedding/: index.html  index.qmd
posts/2017-12-06-nips-ai-hype-and-the-lost-rigor/: index.html  index.qmd
posts/2019-03-10-rust-std-study-series-vec/: index.html  index.qmd
posts/2019-03-16-variance-in-rust-an-intuitive-explanation/: index.html  index.qmd
posts/2019-03-25-rust-std-study-linkedlist/: index.html  index.qmd
(+69 files in other folders)
